--- a/css/10000hours.css
+++ b/css/10000hours.css
@@ -29,16 +29,12 @@
 }
 
 @keyframes rotate {
-    50% {
-        transform: rotate(180deg);
-    }
     100% {
         transform: rotate(360deg);
     }
 }
 
 html, body {
-    width: 100%;
     height: 100%;
 }
 
@@ -48,16 +44,8 @@ body {
     color: #FFF;
 }
 
-#contents {
-    display: flex;
-    justify-content: center;
-}
-
+/* 메인 콘텐츠 */
 .wrapper {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
     margin-top: 50px;
 }
 
@@ -82,7 +70,6 @@ body {
 
 .title_img img {
     width: 100%;
-    height: auto;
 }
 
 /*1만 시간의 법칙 설명*/
@@ -153,9 +140,7 @@ body {
 }
 
 /* 버튼 공통 스타일 */
-button {
-    display: flex;    
-    align-items: center;
+button { 
     font-family: 'GmarketSansBold';
     font-size: 20px;
     color: #5B2386;
